# Automodel

./: pyproject.toml
examples/vlm_finetune/gemma4/: AFRIINSTRUCT_LORA_FULL_1K_RUN_REPORT.md  AFRIINSTRUCT_LORA_FULL_BENCHMARK_REPORT.md  AFRIINSTRUCT_MIGRATION_HANDOFF.md  README_afriinstruct.md  gemma4_e2b_afriinstruct_full.yaml  gemma4_e2b_afriinstruct_peft.yaml
nemo_automodel/components/datasets/vlm/: collate_fns.py
nemo_automodel/components/loggers/: loggers.py
nemo_automodel/recipes/vlm/: finetune.py
tests/unit_tests/datasets/vlm/: test_collate_fns.py
tests/unit_tests/loggers/: test_logger_config.py
tests/unit_tests/recipes/: test_finetune_vlm_helpers.py  test_gemma4_afriinstruct_configs.py
tests/unit_tests/tools/: test_afriinstruct_benchmark.py  test_prepare_afriinstruct.py
tools/: afriinstruct_benchmark.py  prepare_afriinstruct.py
